tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply scroll-smooth scroll-pt-28 lg:scroll-pt-32;
  }

  body {
    @apply bg-darkpurple text-darkgray font-archivo font-extralight;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    @apply text-white font-adonis font-normal;
  }

  h1,
  .h1 {
    @apply text-5xl lg:text-7xl;
  }

  h2,
  .h2 {
    @apply text-3.5xl lg:text-5xl;
  }

  h3,
  .h3 {
    @apply text-3.2xl lg:text-4.5xl;
  }

  h4,
  .h4 {
    @apply text-2.5xl lg:text-3.2xl;
  }

  a:hover {
    @apply text-white;
  }

  a,
  button {
    @apply outline-none;
  }
}

@layer components {
  .site-width {
    @apply w-full px-6 lg:px-11;
  }

  .heading {
    @apply font-archivo font-normal text-3.2xl text-middlebluepurple uppercase;
  }

  .heading-subtext {
    @apply font-archivo font-normal text-0.5xl mb-7 text-brightlavender uppercase;
  }

  .site-header:is(.sticky-header) {
    @apply bg-darkpurple fixed top-0 left-0 right-0 z-20;
  }

  .site-header:is(.sticky-header) .site-header-inner {
    @apply border-b-0;
  }

  .site-header-inner {
    @apply relative z-30;
  }

  .menu-toggle svg {
    @apply transition-all duration-700 ease-in-out;
  }

  .primary-nav-list li {
    @apply px-8 py-5 lg:px-12 lg:py-8 border-t border-t-white/15;
  }

  .primary-nav-list li a {
    @apply inline-block text-4xl xs:text-4.5xl md:text-4.7xl lg:text-6.2xl hover:text-glossygrape duration-700 translate-y-24 opacity-0 transition-all;
  }

  body:is(.body-menu-open) {
    @apply overflow-hidden xl:pr-5;
  }

  body:is(.body-menu-open) .site-header-inner {
    @apply lg:border-b-0;
  }

  body:is(.body-menu-open) .menu-toggle-open {
    @apply hidden;
  }

  body:is(.body-menu-open) .menu-toggle-close {
    @apply block;
  }

  body:not(.body-menu-open) .primary-nav {
    @apply -translate-y-full;
  }

  body:is(.body-menu-open) .primary-nav {
    @apply translate-y-0;
  }

  body:is(.body-menu-open) .primary-nav-list li a {
    opacity: 1;
    transform: none;
  }

  .site-footer {
    @apply border-t-[0.3px] border-white/60;
  }

  /* Team card */
  .team-card {
    @apply lg:min-h-72 2xl:min-h-[36.5vh] border-[0.3px] lg:border-r-0 xl:border-l-[0.3px] lg:border-b-[0.3px] border-white/60;
  }

  .team-card-grid > .team-card-wrapper:nth-child(2) {
    @apply xl:col-span-2 lg:row-start-2 xl:row-auto;
  }

  .team-card-grid > .team-card-wrapper:nth-child(3) {
    @apply lg:row-start-2 xl:row-auto xl:col-span-2 xl:col-start-4;
  }

  .team-card-grid > .team-card-wrapper:nth-child(4) {
    @apply lg:row-start-3 xl:row-start-2 xl:row-auto xl:col-span-2 xl:col-start-2;
  }

  .team-card-grid > .team-card-wrapper:nth-child(5) {
    @apply lg:row-start-3 xl:row-start-2 xl:row-auto xl:col-span-2 xl:col-start-4;
  }

  .team-card-grid > .team-card-wrapper:nth-child(6) {
    @apply lg:row-start-4 xl:row-start-3 xl:row-auto xl:col-span-2 xl:col-start-2;
  }

  .team-card-grid > .team-card-wrapper:nth-child(7) {
    @apply lg:row-start-4 xl:row-start-3 xl:col-span-2 xl:col-start-4;
  }

  .team-card-grid > .team-card-wrapper:nth-child(8) {
    @apply lg:row-start-5 xl:row-start-4 xl:row-auto xl:col-span-2 xl:col-start-2;
  }

  .team-card-grid > .team-card-wrapper:nth-child(9) {
    @apply lg:row-start-5 xl:row-start-4 xl:col-span-2 xl:col-start-4;
  }

  .team-card-grid > div:nth-child(2) .team-card,
  .team-card-grid > div:nth-child(3) .team-card {
    @apply xl:border-t-0;
  }

  .team-card-grid > div:nth-last-child(1) .team-card,
  .team-card-grid > div:nth-last-child(2) .team-card {
    @apply lg:border-b-0;
  }

  .team-card-grid > div:nth-child(2n + 2) .team-card {
    @apply lg:border-l-0 xl:border-l-[0.3px];
  }

  .team-card-header {
    @apply lg:mb-8 z-1 relative;
  }

  .team-card-designation {
    @apply text-white text-lg lg:text-xl mt-4 lg:mt-2;
  }

  .team-card-bg {
    @apply hidden lg:block lg:w-full lg:min-h-[100%] lg:opacity-0 lg:bg-darkpurple lg:absolute lg:inset-0 lg:transition-colors lg:ease-in-out lg:duration-700;
  }

  .team-card-icon {
    @apply transition-transform ease-in-out duration-300;
  }

  .team-card-body {
    @apply text-base lg:text-lg xl:-mt-1 lg:opacity-0 lg:max-h-0 lg:!my-0 overflow-hidden transition-all lg:ease-in-out duration-300;
  }

  .team-card:not(.is-open) .team-card-body {
    @apply max-h-0 ease-in-out;
  }

  .team-card-body-text p + p {
    @apply mt-5;
  }

  .team-card.is-open .team-card-body {
    @apply mt-8 mb-2;
  }

  .team-card.is-open .team-card-icon {
    @apply -rotate-180;
  }

  .team-card-inner {
    @apply px-5 py-8 lg:px-[2vw] lg:pb-[2.5vw] lg:pt-0 lg:absolute lg:inset-0 w-full lg:translate-y-44 2xl:translate-y-[23.1vh] lg:transition-transform lg:ease-in-out lg:duration-500;
  }

  .team-card-letter {
    @apply absolute -z-1 top-2 lg:top-[1vh] right-[3vh] lg:right-[6vh] text-[186px] lg:text-[23vh] leading-none uppercase font-adonis font-extralight text-white/5 opacity-0 lg:opacity-100;
  }

  .team-card:is(.is-open) .team-card-letter {
    @apply opacity-100;
  }

  /*  Hover */
  .team-card:hover {
    @apply lg:cursor-pointer;
  }

  .team-card:hover .team-card-bg {
    @apply lg:min-h-[200%] lg:opacity-100 lg:z-2;
  }

  .team-card:hover .team-card-inner {
    @apply lg:translate-y-24 2xl:translate-y-[14.2vh] lg:z-3;
  }

  .team-card:hover .team-card-body {
    @apply lg:max-h-[125%] lg:opacity-100 lg:overflow-y-auto lg:no-scrollbar;
  }

  .team-card-grid > div:nth-last-child(1) .team-card:hover .team-card-bg,
  .team-card-grid > div:nth-last-child(2) .team-card:hover .team-card-bg {
    @apply lg:-top-full;
  }

  .team-card-grid > div:nth-last-child(1) .team-card:hover .team-card-inner,
  .team-card-grid > div:nth-last-child(2) .team-card:hover .team-card-inner {
    @apply lg:-translate-y-[65%] 2xl:-translate-y-[60%];
  }

  .privacy-policy-section a {
    @apply underline underline-offset-2 text-white/80 hover:text-glossygrape;
  }

  .privacy-policy-section i {
    @apply font-medium;
  }

  .privacy-policy-section strong {
    font-weight: 600;
  }

  .privacy-policy-section h2 {
    @apply mt-12 mb-7 lg:mt-14 text-2.5xl/9 lg:text-3.2xl capitalize;
  }

  .privacy-policy-section h3 {
    @apply mt-7 lg:mt-10 mb-5 lg:mb-6 text-xl lg:text-2xl;
  }

  .privacy-policy-section h4 {
    @apply text-base lg:text-lg;
  }

  .privacy-policy-section p,
  .privacy-policy-section ul {
    @apply my-5 text-lg;
  }

  .privacy-policy-section ul {
    @apply list-square pl-6 lg:pl-8;
  }

  .privacy-policy-section ul li + li {
    @apply mt-1;
  }

  .table-of-content {
    @apply !list-none !pl-0 grid grid-cols-1 lg:grid-cols-2 gap-x-12 !-mt-4;
  }

  .table-of-content li {
    @apply !mb-0 py-4 lg:py-5 border-b border-b-white/15;
  }

  table thead th,
  table tbody td {
    @apply px-2.5 py-5 lg:px-7 border border-white/50 align-top lg:align-middle;
  }

  table thead th {
    @apply text-lg lg:text-2xl text-left font-adonis text-white font-normal;
  }

  table tbody td {
    @apply text-base lg:text-lg;
  }
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

